// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not output CSS if none present 1`] = `
"const number = 42;
const title = String.raw\`This is something\`;"
`;

exports[`evaluates and inlines expressions in scope 1`] = `
"const color = 'blue';
const Title =
/*#__PURE__*/
styled.component('h1', {
  name: \\"Title\\",
  class: \\"Title_t1ugh8t9\\"
});

/*
CSS OUTPUT TEXT START
.Title_t1ugh8t9{color:blue;width:33.333333333333336%;}

CSS OUTPUT TEXT END

CSS OUTPUT MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":3,\\"column\\":6},\\"name\\":\\"Title_t1ugh8t9\\"}]
CSS OUTPUT DEPENDENCIES:[]
*/"
`;

exports[`handles css template literal in JSX element 1`] = `
"<Title class={\\"Title_t1ugh8t9\\"} />;

/*
CSS OUTPUT TEXT START
.Title_t1ugh8t9{font-size:14px;}

CSS OUTPUT TEXT END

CSS OUTPUT MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":1,\\"column\\":13},\\"name\\":\\"Title_t1ugh8t9\\"}]
CSS OUTPUT DEPENDENCIES:[]
*/"
`;

exports[`handles css template literal in object property 1`] = `
"const components = {
  title: \\"title_t1ugh8t9\\"
};

/*
CSS OUTPUT TEXT START
.title_t1ugh8t9{font-size:14px;}

CSS OUTPUT TEXT END

CSS OUTPUT MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":2,\\"column\\":2},\\"name\\":\\"title_t1ugh8t9\\"}]
CSS OUTPUT DEPENDENCIES:[]
*/"
`;

exports[`handles interpolation followed by unit 1`] = `
"const Title =
/*#__PURE__*/
styled.component('h1', {
  name: \\"Title\\",
  class: \\"Title_t1ugh8t9\\",
  vars: {
    \\"t1ugh8t9-0-0\\": [size, \\"em\\"],
    \\"t1ugh8t9-0-1\\": [shadow, \\"px\\"],
    \\"t1ugh8t9-0-2\\": [size, \\"px\\"],
    \\"t1ugh8t9-0-3\\": [props => props.width, \\"vw\\"],
    \\"t1ugh8t9-0-4\\": [props => {
      if (true) {
        return props.height;
      } else {
        return 200;
      }
    }, \\"px\\"],
    \\"t1ugh8t9-0-5\\": [unit, \\"fr\\"],
    \\"t1ugh8t9-0-7\\": [function (props) {
      return 200;
    }, \\"px\\"]
  }
});

/*
CSS OUTPUT TEXT START
.Title_t1ugh8t9{font-size:var(--t1ugh8t9-0-0);text-shadow:black 1px var(--t1ugh8t9-0-1),white -2px -2px;margin:var(--t1ugh8t9-0-2);width:calc(2 * var(--t1ugh8t9-0-3));height:var(--t1ugh8t9-0-4);grid-template-columns:var(--t1ugh8t9-0-5) 1fr 1fr var(--t1ugh8t9-0-5);border-radius:var(--t1ugh8t9-0-7);}

CSS OUTPUT TEXT END

CSS OUTPUT MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":1,\\"column\\":6},\\"name\\":\\"Title_t1ugh8t9\\"}]
CSS OUTPUT DEPENDENCIES:[]
*/"
`;

exports[`handles nested blocks 1`] = `
"const Button =
/*#__PURE__*/
styled.component('button', {
  name: \\"Button\\",
  class: \\"Button_b1ugh8t9\\",
  vars: {
    \\"b1ugh8t9-0-0\\": [regular]
  }
});

/*
CSS OUTPUT TEXT START
.Button_b1ugh8t9{font-family:var(--b1ugh8t9-0-0);}.Button_b1ugh8t9:hover{border-color:blue;}@media (max-width:200px){.Button_b1ugh8t9{width:100%;}}

CSS OUTPUT TEXT END

CSS OUTPUT MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":1,\\"column\\":6},\\"name\\":\\"Button_b1ugh8t9\\"}]
CSS OUTPUT DEPENDENCIES:[]
*/"
`;

exports[`inlines object styles as CSS string 1`] = `
"const cover = {
  position: 'absolute',
  top: 0,
  right: 0,
  bottom: 0,
  left: 0,
  opacity: 1,
  minHeight: 420,
  '@media (min-width: 200px)': {
    WebkitTransition: '400ms',
    MozTransition: '400ms',
    OTransition: '400ms',
    msTransition: '400ms'
  }
};
const Title =
/*#__PURE__*/
styled.component('h1', {
  name: \\"Title\\",
  class: \\"Title_t1ugh8t9\\"
});

/*
CSS OUTPUT TEXT START
.Title_t1ugh8t9{position:absolute;top:0;right:0;bottom:0;left:0;opacity:1;min-height:420px;}@media (min-width:200px){.Title_t1ugh8t9{-webkit-transition:400ms;-moz-transition:400ms;-o-transition:400ms;-ms-transition:400ms;}}

CSS OUTPUT TEXT END

CSS OUTPUT MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":18,\\"column\\":6},\\"name\\":\\"Title_t1ugh8t9\\"}]
CSS OUTPUT DEPENDENCIES:[]
*/"
`;

exports[`prevents class name collision 1`] = `
"const Title =
/*#__PURE__*/
styled.component('h1', {
  name: \\"Title\\",
  class: \\"Title_t1ugh8t9\\",
  vars: {
    \\"t1ugh8t9-0-0\\": [size, \\"px\\"],
    \\"t1ugh8t9-0-1\\": [props => props.color]
  }
});

function more() {
  const Title =
  /*#__PURE__*/
  styled.component('h1', {
    name: \\"Title\\",
    class: \\"Title_t1ugh8t9x\\",
    vars: {
      \\"t1ugh8t9x-1-0\\": [regular]
    }
  });
}

/*
CSS OUTPUT TEXT START
.Title_t1ugh8t9{font-size:var(--t1ugh8t9-0-0);color:var(--t1ugh8t9-0-1);}
.Title_t1ugh8t9x{font-family:var(--t1ugh8t9x-1-0);}

CSS OUTPUT TEXT END

CSS OUTPUT MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":1,\\"column\\":6},\\"name\\":\\"Title_t1ugh8t9\\"},{\\"generated\\":{\\"line\\":2,\\"column\\":0},\\"original\\":{\\"line\\":7,\\"column\\":8},\\"name\\":\\"Title_t1ugh8t9x\\"}]
CSS OUTPUT DEPENDENCIES:[]
*/"
`;

exports[`replaces unknown expressions with CSS custom properties 1`] = `
"const Title =
/*#__PURE__*/
styled.component('h1', {
  name: \\"Title\\",
  class: \\"Title_t1ugh8t9\\",
  vars: {
    \\"t1ugh8t9-0-0\\": [size, \\"px\\"],
    \\"t1ugh8t9-0-1\\": [props => props.color]
  }
});

/*
CSS OUTPUT TEXT START
.Title_t1ugh8t9{font-size:var(--t1ugh8t9-0-0);color:var(--t1ugh8t9-0-1);}

CSS OUTPUT TEXT END

CSS OUTPUT MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":1,\\"column\\":6},\\"name\\":\\"Title_t1ugh8t9\\"}]
CSS OUTPUT DEPENDENCIES:[]
*/"
`;

exports[`throws when contains dynamic expression without evaluate: true in css tag 1`] = `
"/app/index.js: The CSS cannot contain JavaScript expressions. To evaluate the expressions at build time, pass evaluate: true to the babel plugin.
[0m [90m 1 | [39m[36mconst[39m title [33m=[39m css[32m\`[39m[0m
[0m[31m[1m>[22m[39m[90m 2 | [39m[32m  font-size: \${size}px;[39m[0m
[0m [90m   | [39m               [31m[1m^[22m[39m[0m
[0m [90m 3 | [39m[32m\`[39m[33m;[39m[0m"
`;

exports[`throws when not attached to a variable 1`] = `
"/app/index.js: Couldn't determine a name for the component. Ensure that it's either:
- Assigned to a variable
- Is an object property
- Is a prop in a JSX element

[0m[31m[1m>[22m[39m[90m 1 | [39mstyled([32m'h1'[39m)[32m\`[39m[0m
[0m [90m   | [39m[31m[1m^[22m[39m[0m
[0m [90m 2 | [39m[32m  font-size: \${size}px;[39m[0m
[0m [90m 3 | [39m[32m  color: \${props => props.color}[39m[0m
[0m [90m 4 | [39m[32m\`[39m[33m;[39m[0m"
`;

exports[`transpiles css template literal 1`] = `
"const title = \\"title_t1ugh8t9\\";

/*
CSS OUTPUT TEXT START
.title_t1ugh8t9{font-size:14px;}

CSS OUTPUT TEXT END

CSS OUTPUT MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":1,\\"column\\":6},\\"name\\":\\"title_t1ugh8t9\\"}]
CSS OUTPUT DEPENDENCIES:[]
*/"
`;

exports[`transpiles styled template literal 1`] = `
"const Title =
/*#__PURE__*/
styled.component('h1', {
  name: \\"Title\\",
  class: \\"Title_t1ugh8t9\\"
});

/*
CSS OUTPUT TEXT START
.Title_t1ugh8t9{font-size:14px;}

CSS OUTPUT TEXT END

CSS OUTPUT MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":1,\\"column\\":6},\\"name\\":\\"Title_t1ugh8t9\\"}]
CSS OUTPUT DEPENDENCIES:[]
*/"
`;

exports[`uses the same custom property for the same expression 1`] = `
"const Box =
/*#__PURE__*/
styled.component('div', {
  name: \\"Box\\",
  class: \\"Box_b1ugh8t9\\",
  vars: {
    \\"b1ugh8t9-0-0\\": [props => props.size, \\"px\\"]
  }
});

/*
CSS OUTPUT TEXT START
.Box_b1ugh8t9{height:var(--b1ugh8t9-0-0);width:var(--b1ugh8t9-0-0);}

CSS OUTPUT TEXT END

CSS OUTPUT MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":1,\\"column\\":6},\\"name\\":\\"Box_b1ugh8t9\\"}]
CSS OUTPUT DEPENDENCIES:[]
*/"
`;

exports[`uses the same custom property for the same identifier 1`] = `
"const Box =
/*#__PURE__*/
styled.component('div', {
  name: \\"Box\\",
  class: \\"Box_b1ugh8t9\\",
  vars: {
    \\"b1ugh8t9-0-0\\": [size, \\"px\\"]
  }
});

/*
CSS OUTPUT TEXT START
.Box_b1ugh8t9{height:var(--b1ugh8t9-0-0);width:var(--b1ugh8t9-0-0);}

CSS OUTPUT TEXT END

CSS OUTPUT MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":1,\\"column\\":6},\\"name\\":\\"Box_b1ugh8t9\\"}]
CSS OUTPUT DEPENDENCIES:[]
*/"
`;
